Fix link in example document

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<textarea id="md" rows="20">
 # Document
 
-[LiTeX](https://linuskmr.github.io/linuskmr) is a LaTeX alternative. It _creates_ a PDF from a **markdown** file and a CSS stylesheet.
+[LiTeX](https://linuskmr.github.io/litex) is a LaTeX alternative. It _creates_ a PDF from a **markdown** file and a CSS stylesheet.
 
 ## Table
 
